Business implpemented swagger
